--- a/MVCDrugStoreManager/MVCDrugStoreManager/bin/MVCDrugStoreManager.dll.config
+++ b/MVCDrugStoreManager/MVCDrugStoreManager/bin/MVCDrugStoreManager.dll.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="PhanPhoiThuocConnectionString" connectionString="Data Source=DESKTOP-O2938GT\SQLEXPRESS;Initial Catalog=PhanPhoiThuoc;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="PhanPhoiThuoc1ConnectionString" connectionString="Data Source=K-LAPTOP;Initial Catalog=PhanPhoiThuoc1;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
