--- a/MVCDrugStoreManager/MVCDrugStoreManager/Web.config
+++ b/MVCDrugStoreManager/MVCDrugStoreManager/Web.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <add name="PhanPhoiThuocConnectionString" connectionString="Data Source=DESKTOP-O2938GT\SQLEXPRESS;Initial Catalog=PhanPhoiThuoc;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="PhanPhoiThuoc1ConnectionString" connectionString="Data Source=K-LAPTOP;Initial Catalog=PhanPhoiThuoc1;Integrated Security=True"
+    <add name="PhanPhoiThuoc1ConnectionString" connectionString="Data Source=K-LapTop;Initial Catalog=PhanPhoiThuoc1;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="PhanPhoiThuocConnectionString1" connectionString="Data Source=K-LapTop;Initial Catalog=PhanPhoiThuoc;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -47,11 +49,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
