--- a/MVCDrugStoreManager/MVCDrugStoreManager/MVCDrugStoreManager.csproj
+++ b/MVCDrugStoreManager/MVCDrugStoreManager/MVCDrugStoreManager.csproj
@@ -56,6 +56,12 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
@@ -150,6 +156,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\DrugStoreController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -188,6 +195,8 @@
     <Content Include="Content\HomePage\vendor\bootstrap\css\bootstrap.css" />
     <Content Include="Content\HomePage\vendor\bootstrap\css\bootstrap.min.css" />
     <Content Include="Content\Login\css\style.css" />
+    <Content Include="Content\PagedList.css" />
+    <Content Include="images\panadon.jpg" />
     <Content Include="Scripts\HomePage\vendor\bootstrap\js\bootstrap.bundle.js" />
     <Content Include="Scripts\HomePage\vendor\bootstrap\js\bootstrap.bundle.min.js" />
     <Content Include="Scripts\HomePage\vendor\bootstrap\js\bootstrap.js" />
@@ -262,10 +271,16 @@
     <Content Include="Views\Admin\Details.cshtml" />
     <Content Include="Views\Shared\_LayoutUser.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\Admin\Themmoisp.cshtml" />
+    <Content Include="Views\Admin\Drug.cshtml" />
+    <Content Include="Views\Admin\Chitietsp.cshtml" />
+    <Content Include="Views\Admin\Suasp.cshtml" />
+    <Content Include="Views\Admin\Xoasp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\Details\" />
+    <Folder Include="Views\DrugStore\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
